--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -34,6 +34,8 @@ output DP-2 resolution 1920x1080@144Hz position 2560,360
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
 ### Idle configuration
+
+exec swaync
 #
 # Example configuration:
 #
@@ -82,6 +84,7 @@ input "2821:6213:ASUS_ROG_Gladius_II" {
 
     # Start your launcher
     bindsym $mod+space exec $menu
+    bindsym $mod+Shift+n exec swaync-client -t sw
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
@@ -213,16 +216,21 @@ bindsym $mod+r mode "resize"
 #
 # Utilities:
 #
+    #bindsym Control_R exec alacritty
+    bindsym Control_R exec notify-send Audio "Volume +5%"
+    #bindsym $mod+Control_R+Up exec wpctl set-volume \@DEFAULT_AUDIO_SINK@ -l 1.4 5%+; notify-send Audio "Volume +5%"
+    #bindsym $mod+Control_R+Down exec wpctl set-volume \@DEFAULT_AUDIO_SINK@ -l 1.4 5%-; notify-send Audio "Volume +5%"
+    # Adjust volume
     # Special keys to adjust volume via PulseAudio
-    bindsym --locked XF86AudioMute exec pactl set-sink-mute \@DEFAULT_SINK@ toggle
-    bindsym --locked XF86AudioLowerVolume exec pactl set-sink-volume \@DEFAULT_SINK@ -5%
-    bindsym --locked XF86AudioRaiseVolume exec pactl set-sink-volume \@DEFAULT_SINK@ +5%
-    bindsym --locked XF86AudioMicMute exec pactl set-source-mute \@DEFAULT_SOURCE@ toggle
-    # Special keys to adjust brightness via brightnessctl
-    bindsym --locked XF86MonBrightnessDown exec brightnessctl set 5%-
-    bindsym --locked XF86MonBrightnessUp exec brightnessctl set 5%+
-    # Special key to take a screenshot with grim
-    bindsym Print exec grim
+    #bindsym --locked XF86AudioMute exec pactl set-sink-mute \@DEFAULT_SINK@ toggle
+    #bindsym --locked XF86AudioLowerVolume exec pactl set-sink-volume \@DEFAULT_SINK@ -5%
+    #bindsym --locked XF86AudioRaiseVolume exec pactl set-sink-volume \@DEFAULT_SINK@ +5%
+    #bindsym --locked XF86AudioMicMute exec pactl set-source-mute \@DEFAULT_SOURCE@ toggle
+    ## Special keys to adjust brightness via brightnessctl
+    #bindsym --locked XF86MonBrightnessDown exec brightnessctl set 5%-
+    #bindsym --locked XF86MonBrightnessUp exec brightnessctl set 5%+
+    ## Special key to take a screenshot with grim
+    #bindsym Print exec grim
 
 #
 # Status Bar:
@@ -233,7 +241,7 @@ bar {
 
     # When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
-    status_command while date +'%Y-%m-%d %X'; do sleep 1; done
+    status_command /home/mick/.config/sway/bin/status_bar
     font Hack Nerd Font Mono
     colors {
         statusline #ffffff
