--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -3,26 +3,26 @@
 TERM = "xterm-256color"
 
 [font]
-size = 15.0
+size = 12.0
 
 [font.bold]
 # family = "MesloLGS Nerd Font Mono"
-family = "Hack Nerd Font Mono"
+family = "Hack Nerd Font"
 style = "Bold"
 
 [font.bold_italic]
-family = "Hack Nerd Font Mono"
+family = "Hack Nerd Font"
 # family = "MesloLGS Nerd Font Mono"
 style = "Bold Italic"
 
 [font.italic]
-family = "Hack Nerd Font Mono"
+family = "Hack Nerd Font"
 # family = "MesloLGS Nerd Font Mono"
 style = "Italic"
 
 [font.normal]
 # family = "MesloLGS Nerd Font Mono"
-family = "Hack Nerd Font Mono"
+family = "Hack Nerd Font"
 style = "Regular"
 
 [general]
