--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -21,7 +21,7 @@ set $menu wofi --show drun
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /home/mick/Pictures/wallpapers/wallhaven-stars.jpg fill
+output * bg /home/mick/Pictures/wallpapers/wallhaven-test1.png fill
 
 # Displays config
 output DP-1 resolution 2560x1440@144Hz position 0,0
@@ -34,7 +34,7 @@ output DP-2 resolution 1920x1080@144Hz position 2560,360
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
 ### Idle configuration
-
+exec waybar
 exec swaync
 #
 # Example configuration:
@@ -71,6 +71,10 @@ input "2821:6213:ASUS_ROG_Gladius_II" {
     accel_profile flat
 }
 
+#input "1452:591:IQUNIX_IQUNIX_OG80_Mechanical_Keyboard" {
+  #
+#}
+#
 ### Key bindings
 #
 # Basics:
@@ -98,6 +102,8 @@ input "2821:6213:ASUS_ROG_Gladius_II" {
 
     # Exit sway (logs you out of your Wayland session)
     bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
+
+    bindsym $mod+Shift+s exec systemctl suspend
 #
 # Moving around:
 #
@@ -216,51 +222,41 @@ bindsym $mod+r mode "resize"
 #
 # Utilities:
 #
-    #bindsym Control_R exec alacritty
-    bindsym Control_R exec notify-send Audio "Volume +5%"
-    #bindsym $mod+Control_R+Up exec wpctl set-volume \@DEFAULT_AUDIO_SINK@ -l 1.4 5%+; notify-send Audio "Volume +5%"
-    #bindsym $mod+Control_R+Down exec wpctl set-volume \@DEFAULT_AUDIO_SINK@ -l 1.4 5%-; notify-send Audio "Volume +5%"
-    # Adjust volume
-    # Special keys to adjust volume via PulseAudio
-    #bindsym --locked XF86AudioMute exec pactl set-sink-mute \@DEFAULT_SINK@ toggle
-    #bindsym --locked XF86AudioLowerVolume exec pactl set-sink-volume \@DEFAULT_SINK@ -5%
-    #bindsym --locked XF86AudioRaiseVolume exec pactl set-sink-volume \@DEFAULT_SINK@ +5%
-    #bindsym --locked XF86AudioMicMute exec pactl set-source-mute \@DEFAULT_SOURCE@ toggle
-    ## Special keys to adjust brightness via brightnessctl
-    #bindsym --locked XF86MonBrightnessDown exec brightnessctl set 5%-
-    #bindsym --locked XF86MonBrightnessUp exec brightnessctl set 5%+
-    ## Special key to take a screenshot with grim
-    #bindsym Print exec grim
+    # Volume settings
+    bindsym $mod+Ctrl+Up exec wpctl set-volume \@DEFAULT_AUDIO_SINK@ -l 1.4 5%+; notify-send Audio "Volume +5%"
+    bindsym $mod+Ctrl+Down exec wpctl set-volume \@DEFAULT_AUDIO_SINK@ -l 1.4 5%-; notify-send Audio "Volume +5%"
 
 #
 # Status Bar:
 #
-# Read `man 5 sway-bar` for more information about this section.
-bar {
-    position top
-
-    # When the status_command prints a new line to stdout, swaybar updates.
-    # The default just shows the current date and time.
-    status_command /home/mick/.config/sway/bin/status_bar
-    font Hack Nerd Font Mono
-    colors {
-        statusline #ffffff
-        background #0F0F0F8c
-        # inactive_workspace #BCFFDB #BCFFDB #EEEEEE
-        inactive_workspace #333333 #4b6e69 #ffffff
-        active_workspace #333333 #4b6e69 #ffffff
-        focused_workspace #333333 #009480 #EEEEEE
-    }
-}
+#bar {
+    #position top
+#
+    ## When the status_command prints a new line to stdout, swaybar updates.
+    ## The default just shows the current date and time.
+    #status_command /home/mick/.config/sway/bin/status_bar
+    #font Hack Nerd Font Mono
+    #colors {
+        #statusline #ffffff
+        #background #0F0F0F8c
+        ## inactive_workspace #BCFFDB #BCFFDB #EEEEEE
+        #inactive_workspace #333333 #4b6e69 #ffffff
+        #active_workspace #333333 #4b6e69 #ffffff
+        #focused_workspace #333333 #009480 #EEEEEE
+    #}
+#}
 
 ############
 # Stylings #
 ############
 
 font Hack Nerd Font Mono 12
-client.focused #008170 #009480 #EEEEEE #005B41
-client.unfocused #333333 #4b6e69 #ffffff #484e50 #5f676a
-client.focused_inactive #333333 #4b6e69 #ffffff #484e50 #5f676a
+client.focused #3b936b #3b936b #EEEEEE #3b936b
+client.unfocused #333333 #4b6e69 #ffffff #333333 #333333
+client.focused_inactive #333333 #4b6e69 #ffffff #333333 #333333
 title_align center
+default_border pixel 3
+# gaps outer 10
+gaps inner 10
 
 include /etc/sway/config.d/*
